#135 - Bug: Saved Note:- The T in PRESENT is slightly cut off.

--- a/app/assets/stylesheets/participants/custom.css.scss
+++ b/app/assets/stylesheets/participants/custom.css.scss
@@ -148,3 +148,7 @@
   margin-left: 18px;
   float: right;
 }
+
+.monthright {
+  padding-right: 40px !important; margin-left: 0px; padding-left: 9px !important;
+}
